--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ info.application.description=Reddit clone using Spring Boot 2
 info.application.version=0.0.1
 # Actuator
 management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+management.endpoint.health.show-details=when_authorized
 # H2
 spring.h2.console.enabled=true
 spring.datasource.generate-unique-name=false
@@ -14,3 +14,4 @@ spring.datasource.name=springit
 spring.datasource.url=jdbc:h2:mem:springit
 # JPA
 spring.jpa.show-sql=true
+spring.security.user.roles=ADMIN
